# lago-agent-toolkit

./: .gitignore  README.md  mistral_agent_tools.json
.github/workflows/: mcp-docker-build.yml  mcp-rust-tests.yml
agent/: .env.example  Cargo.toml  README.md
agent/src/: agent.rs  api_server.rs  main.rs  mcp_client.rs  mistral.rs  ui.rs
docs/: lago-ai-agent-presentation.md
example/mcp_client/ruby/: Gemfile  main.rb
example/mcp_client/ruby/mcp/: client.rb  config.rb  run_context.rb  tool.rb
example/mcp_client/ruby/model/mistral/: agent.rb  client.rb
mcp/: .env.development.example  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml
mcp/src/: lib.rs  main.rs  permissions.rs  server.rs  tools.rs
mcp/src/tools/: activity_log.rs  api_log.rs  applied_coupon.rs  billable_metric.rs  coupon.rs  credit_note.rs  customer.rs  customer_usage.rs  event.rs  fee.rs  invoice.rs  invoices.rs  payment.rs  plan.rs  subscription.rs
mcp/src/types/: invoice.rs
