[package]
name = "lago-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for Mistral API
reqwest = { version = "0.12", features = ["json", "stream"] }

# MCP client
rmcp = { version = "0.2.0", features = ["client", "transport-io"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# Environment variables
dotenvy = "0.15"

# Terminal IO
tokio-util = { version = "0.7", features = ["io"] }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Text processing
textwrap = "0.16"

# Clipboard functionality
arboard = "3.4"
