[package]
name = "lago-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

reqwest = { version = "0.12", features = ["json", "stream"] }

rmcp = { version = "0.2.0", features = ["client", "transport-io"] }

clap = { version = "4.5", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

futures = "0.3"
tokio-stream = "0.1"

dotenvy = "0.15"

tokio-util = { version = "0.7", features = ["io"] }

ratatui = "0.29"
crossterm = "0.28"

textwrap = "0.16"

arboard = "3.4"

axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.0"
