[package]
name = "lago-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.6.0", features = [
    "server",
    "transport-io",
    "transport-sse-server",
    "transport-streamable-http-server",
    "elicitation",
    "schemars",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
schemars = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
lago-client = "0.1.12"
lago-types = "0.1.12"
clap = { version = "4.5", features = ["derive"] }
tokio-util = "0.7"
axum = { version = "0.8", features = ["macros"] }