[package]
name = "lago-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.6.0", features = [
    "server",
    "transport-io",
    "transport-sse-server",
    "transport-streamable-http-server",
    "elicitation",
    "schemars",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
schemars = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
lago-client = "0.1.23"
lago-types = "0.1.21"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
urlencoding = "2.1"
clap = { version = "4.5", features = ["derive"] }
tokio-util = "0.7"
axum = { version = "0.8", features = ["macros"] }

# LOCAL DEV ONLY — DO NOT COMMIT before opening PR.
# Redirects lago-types and lago-client to a local checkout of getlago/lago-rust-client
# so we can build the MCP fee tools against the unreleased SDK methods. Remove this
# block and bump the version pins above to the published 0.1.22 / 0.1.24 once the
# upstream PRs land on crates.io.
[patch.crates-io]
lago-types = { path = "../../lago-rust-client/lago-types" }
lago-client = { path = "../../lago-rust-client/lago-client" }